Remove unused modelId
Signed-off-by: Daniel Widdis <widdis@gmail.com>